--- a/image.html
+++ b/image.html
@@ -1,8 +1,11 @@
 <body>
     <img src="https://shorturl.at/Sh2Zo"
     height="400px" width="400px" alt="">
-    <br><br>
 
-    <video src="https://shorturl.at/UiZUV" height="200px" width="400px" controls
+    <video src="https://shorturl.at/UiZUV" height="200px" width="400px" 
+    controls></video>
+    <loop><audio src="audio.mp3" controls></audio>
+    
+    
 
 </body>
